syntax = "proto3";

package chat;

import "chat/user.proto";
import "chat/message.proto";

message SendRequest
{
    OutgoingNotification notification = 1;
}

message SendResponse
{
    // if the outgoing notification contained a message, this will contain the message id generated by the server
    MessageId message_id = 1;
}

message ReceiveRequest
{
}

message ReceiveResponse
{
    IncomingNotification notification = 1;
}

service ChatService
{
    rpc Send(SendRequest) returns (SendResponse);
    rpc Receive(ReceiveRequest) returns (stream ReceiveResponse);
}
